--- a/examples/local/package.json
+++ b/examples/local/package.json
@@ -15,7 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "*",
-    "remix-auth": "file:../.."
+    "remix-auth": "^2.0.0"
   },
   "devDependencies": {
     "@remix-run/dev": "*",
